salesforce/force-app/main/default/objects/D360_Impact_Metric__c/D360_Impact_Metric__c.object-meta.xml
<CustomObject>
    <description>Metric used to measure business impact from a goal run.</description>
    <label>D360 Impact Metric</label>
    <nameField>
        <label>Metric Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>D360 Impact Metrics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>