salesforce/force-app/main/default/objects/D360_Impact_Metric__c/fields/Baseline_Value__c.field-meta.xml
<CustomField>
    <fullName>Baseline_Value__c</fullName>
    <label>Baseline Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>