salesforce/force-app/main/default/objects/D360_Impact_Metric__c/fields/Metric_Key__c.field-meta.xml
<CustomField>
    <fullName>Metric_Key__c</fullName>
    <label>Metric Key</label>
    <length>120</length>
    <type>Text</type>
</CustomField>