salesforce/force-app/main/default/objects/D360_Impact_Metric__c/fields/Metric_Unit__c.field-meta.xml
<CustomField>
    <fullName>Metric_Unit__c</fullName>
    <label>Metric Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Count</fullName><default>true</default><label>Count</label></value>
            <value><fullName>Currency</fullName><default>false</default><label>Currency</label></value>
            <value><fullName>Percent</fullName><default>false</default><label>Percent</label></value>
            <value><fullName>Days</fullName><default>false</default><label>Days</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>