salesforce/force-app/main/default/objects/D360_Impact_Metric__c/fields/Narrative__c.field-meta.xml
<CustomField>
    <fullName>Narrative__c</fullName>
    <label>Narrative</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>