salesforce/force-app/main/default/objects/D360_Impact_Metric__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Metric_Unit__c</columns>
    <columns>Baseline_Value__c</columns>
    <columns>Current_Value__c</columns>
    <columns>Target_Value__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Impact Metrics</label>
</ListView>